--- a/sex.html
+++ b/sex.html
@@ -14,7 +14,7 @@
         .slider-container { overflow-x: auto; scroll-snap-type: x mandatory; display: flex; gap: 12px; scrollbar-width: none; border-radius: 20px; }
         .slider-container::-webkit-scrollbar { display: none; }
         .slide-item { flex: 0 0 85%; scroll-snap-align: center; border-radius: 20px; height: 350px; object-fit: cover; border: 1px solid rgba(255,255,255,0.1); }
-        .post-card { margin-bottom: 30px; position: relative; }
+        .post-card { margin-bottom: 40px; position: relative; }
         .overlay-status { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 40; border-radius: 3rem; }
     </style>
 </head>
@@ -28,38 +28,32 @@
         </p>
     </div>
 
-    <div id="postFeed" class="max-w-md mx-auto px-4">
-        </div>
+    <div id="postFeed" class="max-w-md mx-auto px-4"></div>
 
     <script>
-        // --- ဒီနေရာမှာ Post တွေကို စိတ်ကြိုက် ထည့်ပါ (ဒါဆို ဝယ်သူတွေ အကုန်မြင်ရပါပြီ) ---
+        // --- အချက်အလက် ထည့်ရန်နေရာ ---
+        // Post အသစ်ထည့်ချင်ရင် အောက်က [ ] ထဲမှာ ကုဒ်လေးတွေ ကူးထည့်ပေးရုံပါပဲ
         const posts = [
+            /* နမူနာ ထည့်နည်း-
             {
-                name: "Zar Zar",
-                age: 25,
+                name: "အမည်",
+                age: 20,
                 price: "50000",
-                time: "3နာရီ",
-                isResting: false, // နားချင်ရင် true လို့ပြောင်းပါ
-                images: [
-                    "https://images.pexels.com/photos/1382731/pexels-photo-1382731.jpeg", // ပုံ Link ထည့်ပါ
-                    "https://images.pexels.com/photos/139038/pexels-photo-139038.jpeg"
-                ]
+                time: "ညနေ",
+                isResting: false, 
+                images: ["ပုံ Link ၁", "ပုံ Link ၂"]
             },
-            {
-                name: "Aye Aye",
-                age: 22,
-                price: "45000",
-                time: "2နာရီ",
-                isResting: true, // ယာယီနားထားတဲ့ပုံစံ
-                images: [
-                    "https://images.pexels.com/photos/1462637/pexels-photo-1462637.jpeg"
-                ]
-            }
+            */
         ];
 
         function renderFeed() {
             const feed = document.getElementById('postFeed');
             feed.innerHTML = '';
+
+            if (posts.length === 0) {
+                feed.innerHTML = '<p class="text-center text-gray-500 mt-10 italic">Post မရှိသေးပါ။</p>';
+                return;
+            }
 
             posts.forEach(post => {
                 const card = document.createElement('div');
@@ -69,9 +63,10 @@
                         <div class="${post.isResting ? '' : 'hidden'} overlay-status">
                             <i class="fas fa-clock text-pink-500 text-5xl mb-2 animate-pulse"></i>
                             <h2 class="text-2xl font-black text-white neon-text">ယာယီနားထားပါသည်</h2>
+                            <p class="text-gray-400 text-sm">နောက်မှ ပြန်လာခဲ့ပါ</p>
                         </div>
                         <div class="slider-container p-4">
-                            ${post.images.map(img => `<img src="${img}" class="slide-item">`).join('')}
+                            ${post.images.map(img => `<img src="${img}" class="slide-item" onerror="this.src='https://via.placeholder.com/400x350?text=Image+Error'">`).join('')}
                         </div>
                     </div>
                     <div class="p-8">
@@ -81,12 +76,12 @@
                                 <span class="text-pink-400 font-bold">Age: ${post.age}</span>
                             </div>
                             <div class="text-right">
-                                <div class="text-2xl font-black text-white bg-pink-600 px-4 py-1 rounded-2xl">${post.price} Ks</div>
+                                <div class="text-2xl font-black text-white bg-pink-600 px-4 py-1 rounded-2xl shadow-lg">${post.price} Ks</div>
                                 <p class="text-gray-500 text-xs mt-1 font-bold">Available ${post.time}</p>
                             </div>
                         </div>
                         <a href="https://www.facebook.com/profile.php?id=61586281884184" target="_blank"
-                           class="block w-full bg-gradient-to-r from-pink-600 to-purple-700 text-center py-4 rounded-3xl font-black text-xl">
+                           class="block w-full bg-gradient-to-r from-pink-600 to-purple-700 text-center py-4 rounded-3xl font-black text-xl active:scale-95 transition-all">
                            <i class="fab fa-facebook-messenger mr-2"></i> ဆက်သွယ်ရန် (FB)
                         </a>
                     </div>
