--- a/sex.html
+++ b/sex.html
@@ -2,137 +2,141 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>DARKSITE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DARKSIDE</title>
 
 <style>
-*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
-body{margin:0;background:#0b0b0b;color:#eee}
-header{padding:15px;text-align:center;background:#000;border-bottom:1px solid #222}
-.logo{font-size:28px;font-weight:bold;letter-spacing:2px;color:#ff3b3b}
-small{color:#aaa}
-.container{max-width:1100px;margin:auto;padding:15px}
-.card{background:#121212;border-radius:10px;padding:15px;margin-bottom:15px;box-shadow:0 0 10px #000}
-input,button,select{
-width:100%;padding:10px;margin-top:8px;
-border-radius:6px;border:none;font-size:14px}
-input{background:#1c1c1c;color:#fff}
-button{background:#ff3b3b;color:#fff;font-weight:bold;cursor:pointer}
-button:hover{opacity:.85}
-.status{padding:8px;border-radius:6px;text-align:center;margin-bottom:10px}
-.open{background:#0a5}
-.closed{background:#555}
-.sold{background:#800}
-.grid{display:grid;grid-template-columns:repeat(10,1fr);gap:6px}
-.grid img{width:100%;border-radius:5px;border:1px solid #222}
+:root{--bg:#0b0b12;--pink:#ff3d8b;--muted:#9aa0b4}
+*{box-sizing:border-box}
+body{
+ margin:0;font-family:system-ui;
+ background:radial-gradient(900px 500px at 50% -200px,#1b1f3a,transparent),var(--bg);
+ color:#fff
+}
+h1{text-align:center;color:#ff5fa2;letter-spacing:4px}
+.container{max-width:1000px;margin:auto;padding:16px}
+
+.card{
+ background:#0f1430;border-radius:22px;padding:14px;margin-bottom:18px
+}
+.imggrid{display:grid;grid-template-columns:repeat(10,1fr);gap:6px}
+.imggrid img{width:100%;height:72px;object-fit:cover;border-radius:8px}
+
+.info{display:flex;justify-content:space-between;margin-top:10px}
+.badge{background:var(--pink);padding:6px 12px;border-radius:999px}
+.meta{color:var(--muted)}
+.btn{
+ display:block;margin-top:10px;padding:14px;border-radius:14px;
+ background:linear-gradient(90deg,#ff3d8b,#a855f7);
+ text-align:center;color:#fff;text-decoration:none
+}
+
+.admin{background:#0f142e;border-radius:16px;padding:14px;margin-bottom:16px}
+.admin input,.admin select,.admin button{
+ width:100%;padding:10px;margin-top:8px;border-radius:10px
+}
 .hidden{display:none}
-.footer{text-align:center;color:#666;font-size:12px;margin-top:20px}
+.blur{filter:blur(8px);opacity:.4}
+.actions{display:flex;gap:6px;margin-top:8px}
+.actions button{flex:1}
 </style>
 </head>
 
 <body>
 
-<header>
-  <div class="logo">DARKSITE</div>
-  <small>Adult Chat & Dating Platform • 18+</small>
-</header>
-
+<h1>DARKSIDE</h1>
 <div class="container">
 
-<!-- AGE GATE -->
-<div id="ageGate" class="card">
-<h3>Age Verification</h3>
-<p>You must be 18+ to enter.</p>
-<button onclick="enterSite()">I am 18+</button>
+<div id="loginBox" class="admin">
+<b>Admin Login</b>
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Password">
+<button onclick="login()">Login</button>
 </div>
 
-<!-- LOGIN -->
-<div id="loginBox" class="card hidden">
-<h3>Login / Register</h3>
-<input id="user" placeholder="Username">
-<input id="pass" type="password" placeholder="Password (no spaces)">
-<button onclick="login()">Enter</button>
-</div>
-
-<!-- MAIN -->
-<div id="main" class="hidden">
-
-<div class="card">
-<div id="statusBox" class="status open">STATUS: OPEN</div>
-
-<select id="statusSelect" onchange="changeStatus()">
-<option value="open">OPEN</option>
-<option value="closed">TEMPORARILY CLOSED</option>
-<option value="sold">SOLD OUT</option>
+<div id="panel" class="admin hidden">
+<input id="name" placeholder="Name">
+<input id="age" type="number" placeholder="Age 18+">
+<input id="time" placeholder="Time">
+<input id="price" placeholder="Price">
+<select id="status">
+<option>OPEN</option>
+<option>CLOSED</option>
+<option>SOLD</option>
 </select>
+<input type="file" id="files" accept="image/*" multiple>
+<button onclick="createPost()">Save</button>
 </div>
 
-<div class="card">
-<h3>Upload Pictures (1–30)</h3>
-<input type="file" accept="image/*" multiple onchange="loadImages(event)">
-<div id="imgGrid" class="grid"></div>
+<div id="posts"></div>
 </div>
 
-<div class="card">
-<button onclick="order()">PLACE ORDER</button>
-</div>
-
-</div>
-
-<div class="footer">
-© DARKSITE • Adult Only • All rights reserved
-</div>
-
-</div>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
 
 <script>
-const ADMIN_ID = "Z@w119241";
-let images = [];
+const firebaseConfig = {
+  apiKey: "YOUR_KEY",
+  authDomain: "YOUR_DOMAIN",
+  projectId: "YOUR_ID",
+  storageBucket: "YOUR_BUCKET",
+  appId: "YOUR_APP_ID"
+};
 
-function enterSite(){
-document.getElementById("ageGate").classList.add("hidden");
-document.getElementById("loginBox").classList.remove("hidden");
-}
+firebase.initializeApp(firebaseConfig);
+const auth=firebase.auth();
+const db=firebase.firestore();
+const storage=firebase.storage();
+
+const FB_LINK="https://www.facebook.com/profile.php?id=61586281884184";
 
 function login(){
-let u = user.value.trim();
-let p = pass.value;
-
-if(p.includes(" ")){
-alert("Password must not contain spaces");
-return;
+ auth.signInWithEmailAndPassword(email.value,password.value)
+ .then(()=>{
+  loginBox.classList.add("hidden");
+  panel.classList.remove("hidden");
+ });
 }
 
-document.getElementById("loginBox").classList.add("hidden");
-document.getElementById("main").classList.remove("hidden");
+async function createPost(){
+ if(+age.value<18) return alert("18+ only");
+ let urls=[];
+ for(let f of files.files){
+  let ref=storage.ref("posts/"+Date.now()+"_"+f.name);
+  await ref.put(f);
+  urls.push(await ref.getDownloadURL());
+ }
+ await db.collection("posts").add({
+  name:name.value,age:age.value,time:time.value,
+  price:price.value,status:status.value,
+  imgs:urls,disabled:false,created:Date.now()
+ });
 }
 
-function loadImages(e){
-let files = [...e.target.files];
-if(files.length>30){alert("Max 30 images");return;}
-images=[];
-imgGrid.innerHTML="";
-files.forEach(f=>{
-let r=new FileReader();
-r.onload=()=>{
-let img=document.createElement("img");
-img.src=r.result;
-imgGrid.appendChild(img);
-};
-r.readAsDataURL(f);
+db.collection("posts").orderBy("created","desc")
+.onSnapshot(snap=>{
+ posts.innerHTML="";
+ snap.forEach(doc=>{
+  let p=doc.data();
+  let c=document.createElement("div");
+  c.className="card";
+  c.innerHTML=`
+   <div class="${p.disabled?'blur':''}">
+    <div class="imggrid">${p.imgs.map(i=>`<img src="${i}">`).join("")}</div>
+   </div>
+   <div class="info">
+    <div>${p.name}<div class="meta">${p.age} • ${p.time}</div></div>
+    <div class="badge">${p.price}</div>
+   </div>
+   <div class="meta">${p.status}</div>
+   <a class="btn" href="${FB_LINK}" target="_blank">Order</a>
+  `;
+  posts.appendChild(c);
+ });
 });
-}
-
-function changeStatus(){
-let s=statusSelect.value;
-statusBox.className="status "+s;
-statusBox.innerText="STATUS: "+s.toUpperCase();
-imgGrid.style.display = (s==="open")?"grid":"none";
-}
-
-function order(){
-window.location.href="https://www.facebook.com/profile.php?id=61586281884184";
-}
 </script>
 
 </body>
