--- a/sex.html
+++ b/sex.html
@@ -15,26 +15,15 @@ body{
 }
 h1{text-align:center;color:#ff5fa2;letter-spacing:4px}
 .container{max-width:1000px;margin:auto;padding:16px}
-
-.card{
- background:#0f1430;border-radius:22px;padding:14px;margin-bottom:18px
-}
+.card{background:#0f1430;border-radius:22px;padding:14px;margin-bottom:18px}
 .imggrid{display:grid;grid-template-columns:repeat(10,1fr);gap:6px}
 .imggrid img{width:100%;height:72px;object-fit:cover;border-radius:8px}
-
 .info{display:flex;justify-content:space-between;margin-top:10px}
 .badge{background:var(--pink);padding:6px 12px;border-radius:999px}
 .meta{color:var(--muted)}
-.btn{
- display:block;margin-top:10px;padding:14px;border-radius:14px;
- background:linear-gradient(90deg,#ff3d8b,#a855f7);
- text-align:center;color:#fff;text-decoration:none
-}
-
+.btn{display:block;margin-top:10px;padding:14px;border-radius:14px;background:linear-gradient(90deg,#ff3d8b,#a855f7);text-align:center;color:#fff;text-decoration:none}
 .admin{background:#0f142e;border-radius:16px;padding:14px;margin-bottom:16px}
-.admin input,.admin select,.admin button{
- width:100%;padding:10px;margin-top:8px;border-radius:10px
-}
+.admin input,.admin select,.admin button{width:100%;padding:10px;margin-top:8px;border-radius:10px}
 .hidden{display:none}
 .blur{filter:blur(8px);opacity:.4}
 .actions{display:flex;gap:6px;margin-top:8px}
@@ -47,13 +36,14 @@ h1{text-align:center;color:#ff5fa2;letter-spacing:4px}
 <h1>DARKSIDE</h1>
 <div class="container">
 
+<!-- ADMIN LOGIN (Admin only knows this) -->
 <div id="loginBox" class="admin">
 <b>Admin Login</b>
-<input id="email" placeholder="Email">
-<input id="password" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
+<input id="adminId" placeholder="Admin ID">
+<button onclick="login()">Enter</button>
 </div>
 
+<!-- ADMIN PANEL -->
 <div id="panel" class="admin hidden">
 <input id="name" placeholder="Name">
 <input id="age" type="number" placeholder="Age 18+">
@@ -68,37 +58,38 @@ h1{text-align:center;color:#ff5fa2;letter-spacing:4px}
 <button onclick="createPost()">Save</button>
 </div>
 
+<!-- POSTS -->
 <div id="posts"></div>
 </div>
 
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
 
 <script>
-const firebaseConfig = {
-  apiKey: "YOUR_KEY",
-  authDomain: "YOUR_DOMAIN",
-  projectId: "YOUR_ID",
-  storageBucket: "YOUR_BUCKET",
-  appId: "YOUR_APP_ID"
+const firebaseConfig={
+ apiKey:"YOUR_KEY",
+ authDomain:"YOUR_DOMAIN",
+ projectId:"YOUR_ID",
+ storageBucket:"YOUR_BUCKET",
+ appId:"YOUR_APP_ID"
 };
-
 firebase.initializeApp(firebaseConfig);
-const auth=firebase.auth();
+
 const db=firebase.firestore();
 const storage=firebase.storage();
 
+const ADMIN_ID="Z@w119241";
 const FB_LINK="https://www.facebook.com/profile.php?id=61586281884184";
+let isAdmin=false;
 
 function login(){
- auth.signInWithEmailAndPassword(email.value,password.value)
- .then(()=>{
+ if(adminId.value===ADMIN_ID){
+  isAdmin=true;
   loginBox.classList.add("hidden");
   panel.classList.remove("hidden");
- });
+ }else alert("Wrong Admin ID");
 }
 
 async function createPost(){
@@ -110,10 +101,16 @@ async function createPost(){
   urls.push(await ref.getDownloadURL());
  }
  await db.collection("posts").add({
-  name:name.value,age:age.value,time:time.value,
-  price:price.value,status:status.value,
-  imgs:urls,disabled:false,created:Date.now()
+  name:name.value,
+  age:age.value,
+  time:time.value,
+  price:price.value,
+  status:status.value,
+  imgs:urls,
+  disabled:false,
+  created:Date.now()
  });
+ files.value="";
 }
 
 db.collection("posts").orderBy("created","desc")
